Use Number.valueOf() methods rather than constructors